Got parameterized xslt working.  Fixed up tweets examples 1 2

--- a/server/kite9-templates/src/main/resources/static/public/templates/editor/editor.css
+++ b/server/kite9-templates/src/main/resources/static/public/templates/editor/editor.css
@@ -7,10 +7,11 @@
  */
 @media editor {
   [k9-elem=diagram] {
-    --kite9-padding: 200pt !important;
+  	 --kite9-padding: 200pt !important; 
+     --kite9-min-width: 50pt;
+     --kite9-min-height: 50pt;
   }  
 }
-
 
 /* 
  * Prevents the original selection process 
