Client-side rendering & undo working

--- a/server/kite9-templates/src/main/resources/static/public/templates/editor/editor.css
+++ b/server/kite9-templates/src/main/resources/static/public/templates/editor/editor.css
@@ -13,6 +13,16 @@
   }  
 }
 
+/**
+ * Same as above, but using media attribute
+ */
+[media=editor] [k9-elem=diagram] {
+   --kite9-padding: 200pt !important; 
+   --kite9-min-width: 50pt;
+   --kite9-min-height: 50pt;
+}  
+
+
 /* 
  * Prevents the original selection process 
  */
