--- a/client/fonts/noto-sans/NotoSans.css
+++ b/client/fonts/noto-sans/NotoSans.css
@@ -3,7 +3,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url('/public/fonts/noto-sans/NotoSans-Italic.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-sans/NotoSans-Italic.ttf?v=v0.2') format('truetype');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/public/fonts/noto-sans/NotoSans-Regular.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-sans/NotoSans-Regular.ttf?v=v0.2') format('truetype');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url('/public/fonts/noto-sans/NotoSans-BoldItalic.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-sans/NotoSans-BoldItalic.ttf?v=v0.2') format('truetype');
 }
 
 
@@ -28,5 +28,5 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('/public/fonts/noto-sans/NotoSans-Bold.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-sans/NotoSans-Bold.ttf?v=v0.2') format('truetype');
 }
