--- a/client/fonts/dancing-script/DancingScript.css
+++ b/client/fonts/dancing-script/DancingScript.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/public/fonts/dancing-script/DancingScript-Regular.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/dancing-script/DancingScript-Regular.ttf?v=v0.2') format('truetype');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('/public/fonts/dancing-script/DancingScript-Medium.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/dancing-script/DancingScript-Medium.ttf?v=v0.2') format('truetype');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('/public/fonts/dancing-script/DancingScript-SemiBold.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/dancing-script/DancingScript-SemiBold.ttf?v=v0.2') format('truetype');
 }
 
 @font-face {
@@ -27,5 +27,5 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('/public/fonts/dancing-script/DancingScript-Bold.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/dancing-script/DancingScript-Bold.ttf?v=v0.2') format('truetype');
 }
