--- a/client/fonts/metropolis/metropolis.css
+++ b/client/fonts/metropolis/metropolis.css
@@ -1,49 +1,49 @@
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Black.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Black.ttf?v=v0.2') format('truetype');
 	font-weight: 900;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-ExtraBold.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-ExtraBold.ttf?v=v0.2') format('truetype');
 	font-weight: 800;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Bold.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Bold.ttf?v=v0.2') format('truetype');
 	font-weight: 700;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Medium.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Medium.ttf?v=v0.2') format('truetype');
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Regular.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Regular.ttf?v=v0.2') format('truetype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Light.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Light.ttf?v=v0.2') format('truetype');
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-ExtraLight.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-ExtraLight.ttf?v=v0.2') format('truetype');
 	font-weight: 200;
 
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-Thin.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-Thin.ttf?v=v0.2') format('truetype');
 	font-weight: 100;
 }
 
@@ -52,56 +52,56 @@
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-BlackItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-BlackItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 900;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-ExtraBoldItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-ExtraBoldItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 800;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-BoldItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-BoldItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 700;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-MediumItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-MediumItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 500;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-RegularItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-RegularItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 400;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-LightItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-LightItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 300;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-ExtraLightItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-ExtraLightItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 200;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: "metropolis";
-	src: url('/public/fonts/metropolis/Metropolis-ThinItalic.ttf') format('truetype');
+	src: url('/github/kite9-org/kite9/fonts/metropolis/Metropolis-ThinItalic.ttf?v=v0.2') format('truetype');
 	font-weight: 100;
 	font-style: italic;
 }
