--- a/client/fonts/noto-serif-display/NotoSerifDisplay.css
+++ b/client/fonts/noto-serif-display/NotoSerifDisplay.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('/public/fonts/noto-serif-display/NotoSerifDisplay-Regular.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-serif-display/NotoSerifDisplay-Regular.ttf?v=v0.2') format('truetype');
 }
 
 /* latin */
@@ -12,5 +12,5 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('/public/fonts/noto-serif-display/NotoSerifDisplay-SemiBold.ttf') format('truetype');
+  src: url('/github/kite9-org/kite9/fonts/noto-serif-display/NotoSerifDisplay-SemiBold.ttf?v=v0.2') format('truetype');
 }
