--- a/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
@@ -54,13 +54,19 @@
 
 /* Mouse-over effects: stroke, fill + outline and pulse */
 
+.mouseover > g > [k9-highlight~=stroke],
+.mouseover > g > [k9-highlight~=outline],
+.mouseover > g > [k9-highlight~=bar],
 .mouseover > [k9-highlight~=stroke],
 .mouseover > [k9-highlight~=outline],
-.mouseover > [k9-highlight~=bar] {
+.mouseover > [k9-highlight~=bar]  {
 	stroke: #BBDDEE !important;
 	stroke-opacity: 1 !important;
 }
 
+.mouseover > g > [k9-highlight~=pulse],
+.mouseover > g > [k9-highlight~=fill],
+.mouseover > g > [k9-highlight~=grab],
 .mouseover > [k9-highlight~=pulse],
 .mouseover > [k9-highlight~=fill],
 .mouseover > [k9-highlight~=grab],
@@ -71,13 +77,18 @@
 
 /* selected effect: stroke, fill, outline and pulse */
 
+.selected > g > [k9-highlight~=outline],
+.selected > g > [k9-highlight~=stroke],
+.selected > g > [k9-highlight~=bar],
 .selected > [k9-highlight~=outline],
 .selected > [k9-highlight~=stroke],
 .selected > [k9-highlight~=bar] {
 	stroke: rgb(255, 204, 0) !important;
 	stroke-opacity: .8 !important;
 }
-
+.selected > g > [k9-highlight~=pulse],
+.selected > g > [k9-highlight~=fill],
+.selected > g > [k9-highlight~=grab],
 .selected > [k9-highlight~=pulse],
 .selected > [k9-highlight~=fill],
 .selected > [k9-highlight~=grab] {
@@ -95,11 +106,13 @@
 
 /* Selected text effect */
 
+[id].mouseover > g > [k9-highlight~=pulse] > text,
 [id].mouseover > [k9-highlight~=pulse] > text {
   fill: #CCEEFF !important;
   fill-opacity: .6 !important;
 }
 
+[id].selected > g > [k9-highlight~=pulse] > text,
 [id].selected > [k9-highlight~=pulse] > text {
 	fill: rgb(255, 204, 0) !important;
 	fill-opacity: .6 !important;	
