Allowed to set the default label

--- a/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/highlight/highlight.css
@@ -54,19 +54,19 @@
 
 /* show default elements (default label, link etc) */
 
-.indicators-on [id][default] > [k9-highlight~=grab],
-.indicators-on [id][default] > g > [k9-highlight~=grab] {
-  stroke-width: 10pt !important;
-  fill-opacity: 1 !important;
-  fill: #fd9870 !important;
-}
-
 .indicators-on [id][default] > [k9-highlight~=bar],
 .indicators-on [id][default] > g > [k9-highlight~=bar] {
   stroke-width: 10pt !important;
   stroke-opacity: .8 !important;
   stroke: #fd9870 !important;
 }
+
+.indicators-on [id][default] > [k9-highlight~=pulse],
+.indicators-on [id][default] > g > [k9-highlight~=pulse] {
+  fill-opacity: 1 !important;
+  fill: #fd9870 !important;
+}
+
 
 /* Mouse-over effects: stroke, fill + outline and pulse */
 
