--- a/server/kite9-server-java/src/main/resources/static/public/templates/links/links-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/links/links-elements.css
@@ -9,7 +9,9 @@
 }
 
 /** 
- * Link bodies of various types
+ * Link bodies of various types.
+ * fill: none prevents curved links being selected from some
+ * area outside the link.
  */
 [k9-elem=link-grab],
 [k9-elem=align-grab],
@@ -18,6 +20,7 @@
 [k9-elem=link-body] {
   --kite9-usage: decal;
   --kite9-type: svg;
+  fill: none !important;
 }
 
 [k9-elem=from],
