Allowed terminator linking to ports

--- a/server/kite9-server-java/src/main/resources/static/public/templates/links/links-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/links/links-elements.css
@@ -96,6 +96,13 @@
 }
 
 /**
+ * Ports
+ */
+ [k9-elem=port] {
+ 	--kite9-type: port;
+ }
+
+/**
  * For making palette look nice
  */
 [k9-elem=hub] {
