--- a/server/kite9-server-java/src/main/resources/static/public/classes/overlay/overlay.css
+++ b/server/kite9-server-java/src/main/resources/static/public/classes/overlay/overlay.css
@@ -1,13 +1,22 @@
-._overlay rect {
+._overlay rect._background {
 	fill: white;
-	fill-opacity: 0.25;
+	fill-opacity: .5;
 	stroke: none;
 }
 
-._overlay path {
+._overlay path._sizing,
+._overlay path._sizing-marker {
 	stroke: #fd9870;
 	stroke-opacity: 1;
 	stroke-width: 1px;
+	stroke-dasharray: 2 2;
+	fill: none;	
+}
+
+._overlay rect._sizing {
+	stroke: #fd9870;
+	stroke-opacity: 1;
+	stroke-width: 2px;
 	stroke-dasharray: 2 2;
 	fill: none;
 }
