--- a/templates/risk-first/site/site-elements.css
+++ b/templates/risk-first/site/site-elements.css
@@ -118,7 +118,8 @@
   --kite9-layout: vertical;
   --kite9-padding: 10pt;
   --kite9-connection-align: 50%;
-  --kite9-min-size: 110pt 140pt;
+  --kite9-min-width: 110pt;
+  --kite9-min-height: 140pt;
 }
 
 
