Now allowing font styling

--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -7,6 +7,7 @@
 @import url(/public/templates/highlight/highlight.css);
 @import url(/public/templates/editor/editor.css);
 @import url(/public/fonts/metropolis/metropolis.css);
+@import url(/public/fonts/chirp/chirp-ttf.css);
 
 [k9-elem=box] > [k9-texture=background] {
 	fill: #CCCCAA;
