ALlowed grouping structure to be maintained while flowing text

--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -8,6 +8,7 @@
 @import url(/public/templates/editor/editor.css);
 @import url(/public/fonts/metropolis/metropolis.css);
 @import url(/public/fonts/chirp/chirp-ttf.css);
+@import url(/public/fonts/fontawesome/fontawesome.css);
 
 [k9-elem=box] > [k9-texture=background] {
 	fill: #CCCCAA;
