--- a/server/kite9-server-java/src/main/resources/static/public/templates/editor/contradictions.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/editor/contradictions.css
@@ -1,15 +1,23 @@
 /**
  * This highlights contradicting elements
  */
+.indicators-on  *[k9-info~="contradicting:"] > g >[k9-highlight~=stroke],
+.indicators-on  *[k9-info~="contradicting:"] > g > [k9-highlight~=outline],
+.indicators-on  *[k9-info~="contradicting:"] > g > [k9-highlight~=bar],
 .indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=stroke],
 .indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=outline],
 .indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=bar] {
 	stroke: #ff5956;
+	stroke-opacity: .5;
 }
 
-.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight=fill],
-.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight=grab],
-.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight=pulse] {
+.indicators-on  *[k9-info~="contradicting:"] > g > [k9-highlight~=stroke],
+.indicators-on  *[k9-info~="contradicting:"] > g > [k9-highlight~=outline],
+.indicators-on  *[k9-info~="contradicting:"] > g > [k9-highlight~=bar],
+.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=stroke],
+.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=outline],
+.indicators-on  *[k9-info~="contradicting:"] > [k9-highlight~=bar] {
 	fill: #ff5956;
+	fill-opacity: .5;
 }
  
