--- a/visualization/kite9-visualization-java/src/test/resources/org/kite9/diagram/r1/r1.css
+++ b/visualization/kite9-visualization-java/src/test/resources/org/kite9/diagram/r1/r1.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: "opensans-light-webfont";
-	src: url('../../../../client/fonts/opensans-light-webfont.ttf') format('truetype');
+	src: url('./opensans-light-webfont.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: "opensans-bold-webfont";
-	src: url('../../../../client/fonts/opensans-bold-webfont.ttf') format('truetype');
+	src: url('./opensans-bold-webfont.ttf') format('truetype');
 }
 
 @font-face {
