--- a/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
+++ b/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
@@ -1,29 +1,29 @@
 @font-face {
 	font-family: "opensans-light-webfont";
-	src: url('../client/fonts/opensans-light-webfont.ttf') format('truetype');
+	src: url('./opensans-light-webfont.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: "opensans-bold-webfont";
-	src: url('../client/fonts/opensans-bold-webfont.ttf') format('truetype');
+	src: url('./opensans-bold-webfont.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: "opensans-regular-webfont";
-	src: url('../client/fonts/opensans-regular-webfont.ttf') format('truetype');
+	src: url('./opensans-regular-webfont.ttf') format('truetype');
 }
 
 /** these two are used to test font-caching bug. */
 
 @font-face {
 	font-family: "chirp";
-	src: url('../client/fonts/chirp-medium-web.ttf') format('truetype');
+	src: url('./chirp-medium-web.ttf') format('truetype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: "opensans";
-	src: url('../client/fonts/chirp-bold-web.ttf') format('truetype');
+	src: url('./chirp-bold-web.ttf') format('truetype');
 	font-weight: 700;
 }
 
