Allowing navigation of small elements via the context menu

--- a/server/kite9-server-java/src/main/resources/static/public/templates/editor/editor.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/editor/editor.css
@@ -21,6 +21,13 @@
    --kite9-min-height: 50pt;
 }  
 
+/**
+ * Used to highlight on-screen elements at times
+ */
+[k9-elem].attention {
+	stroke: #ff5956 !important;
+	stroke-opacity: 1 !important;
+}
 
 /* 
  * Prevents the original selection process 
