--- a/server/kite9-server-java/src/main/resources/static/public/templates/containers/containers-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/containers/containers-textures.css
@@ -1,16 +1,12 @@
-[k9-texture=background][k9-elem=container] > g.k9-shape > rect {
+[k9-texture=background][k9-elem=container] {
 	stroke: black;
 	stroke-width: 1pt;
 }
 
 [k9-texture=background][k9-elem=container].solid > g.k9-shape > rect {
-	stroke: black;
-	stroke-width: 2pt;
 	stroke-dasharray: none;
 }
 
 [k9-texture=background][k9-elem=container].dotted > g.k9-shape > rect {
-	stroke: black;
-	stroke-width: 1pt;
 	stroke-dasharray: 4 4;	
 }
