--- a/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels-elements.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/labels/labels-elements.css
@@ -4,7 +4,7 @@
 [k9-elem=label] {
 	--kite9-usage: label;
 	--kite9-sizing: minimize;
-	--kite9-label-placement: bottom-left;
+	--kite9-label-placement: down;
 }
 
 [k9-elem=label-inner] {
