--- a/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
+++ b/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
@@ -171,6 +171,7 @@ svg {
 	--kite9-type: container;
 	--kite9-sizing: maximize;
 	--kite9-traversal: always;
+	--kite9-min-size: 50px 50px;
 }
 
 [k9-elem=toLabel],
