Finished refactoring containment to use types

--- a/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/basic/basic-textures.css
@@ -28,3 +28,11 @@
   font-family: "metropolis";
   font-size: 35pt;
 }
+
+[k9-elem=box].shaded {
+	fill: #AA5500; 
+}
+
+[k9-elem=textarea].warning {
+	fill: #FF8800; 
+}
