--- a/server/kite9-server-java/src/main/resources/static/public/external/normform-2.0.css
+++ b/server/kite9-server-java/src/main/resources/static/public/external/normform-2.0.css
@@ -51,7 +51,7 @@ form.normform fieldset {
     border: 1px solid lightgrey;
     border-radius: 2px;
     box-shadow: 0 2px 8px 0 rgba(0,0,0,0.05);
-	padding: 20px;
+	padding: .6rem;
 	margin: 0 0 10px 0px;
 }
 
