--- a/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
+++ b/visualization/kite9-visualization-java/src/test/resources/stylesheets/tester.css
@@ -52,7 +52,7 @@ svg {
 	--kite9-padding: 3px 6px 3px 6px; 
 	--kite9-horizontal-sizing: maximize;
 	--kite9-vertical-sizing: minimize;
-    --kite9-label-placement: down;
+    --kite9-direction: down;
 }
 
 [k9-elem=key] [k9-elem=body] {
@@ -153,7 +153,7 @@ svg {
 	--kite9-type: container; 
 	--kite9-sizing: minimize;
 	--kite9-padding: 4px;
-    --kite9-label-placement: down;
+    --kite9-direction: down;
 }
 
 [k9-elem=grid] {
@@ -172,6 +172,7 @@ svg {
 	--kite9-sizing: maximize;
 	--kite9-traversal: always;
 	--kite9-min-size: 50px 50px;
+	fill: white;
 }
 
 [k9-elem=toLabel],
@@ -397,7 +398,6 @@ svg {
 .cell-edge {
 	stroke: #BBBBBB;
 	stroke-width: .5px;
-	fill: none;
 }
 
 .grid-back {
