Added svg, svg-fixed formats

--- a/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats-textures.css
+++ b/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats-textures.css
@@ -20,6 +20,12 @@
   --kite9-min-size: 50pt 50pt;
 }
 
+/* svg */
+
+[k9-format=svg] {
+  --kite9-margin: 10pt;
+}
+
 /* container format */
 
 [k9-format=container] {
