--- a/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats.css
+++ b/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats.css
@@ -26,6 +26,16 @@
   --kite9-vertical-align: center;
 }
 
+/* svg */
+
+[k9-format=svg],
+[k9-format=svg-fixed] {
+  --kite9-type: svg;
+  --kite9-horizontal-align: center;
+  --kite9-vertical-align: center;
+}
+
+
 /* container format */
 
 [k9-format=container] {
