Fixed home page, got svg formats working

--- a/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats.css
+++ b/server/kite9-server-java/src/jvmMain/resources/static/public/templates/formats/formats.css
@@ -31,6 +31,7 @@
 [k9-format=svg],
 [k9-format=svg-fixed] {
   --kite9-type: svg;
+  --kite9-usage: regular;
   --kite9-horizontal-align: center;
   --kite9-vertical-align: center;
 }
