--- a/server/kite9-server-java/src/jvmMain/resources/static/public/templates/admin/admin-textures.css
+++ b/server/kite9-server-java/src/jvmMain/resources/static/public/templates/admin/admin-textures.css
@@ -44,6 +44,10 @@
 	--kite9-grid-columns: 4;
 }
 
+[k9-elem=container].list {
+	--kite9-layout: down;
+}
+
 [k9-elem=container] > [k9-elem=back] {
 	stroke-width: 1pt;
 	stroke: #454545;
