--- a/kite9-server-java/src/main/resources/static/public/classes/context-menu/context-menu.css
+++ b/kite9-server-java/src/main/resources/static/public/classes/context-menu/context-menu.css
@@ -26,8 +26,7 @@
 	user-select: none; 
 	-webkit-user-select: none;
 	opacity: .9;
-	max-width: 24rem;
-	width: 18rem;
+	/*max-width: 24rem;*/
 	font-family: metropolis, sans-serif;
 	z-index: 200;
 }
@@ -68,11 +67,23 @@
 }
 
 .contextMenu .large-icon img {
-	width: 10rem;
+  width: 4rem;
   cursor: pointer;
   border-radius: .2rem;
   background-color: #EEEEEE;
   margin: .3rem;
+}
+
+.contextMenu fieldset.icons,
+.contextMenu div.icons {
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 15.8rem;
+	
+}
+
+.contextMenu div.wide.icons {
+	max-width: 30.4rem;
 }
 
 .contextMenu img.selected {
@@ -102,20 +113,29 @@
 	background-color: lightgrey;
 }
 
-
-.contextMenu .large-icon img {
-  width: 10rem;
-  cursor: pointer;
-  border-radius: .2rem;
-  background-color: #EEEEEE;
-  margin: .3rem;
-  border: 2px solid white;
+.contextMenu a.named-icon {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	cursor: pointer;
+	margin: .3rem;
+	flex-basis: 7rem;
+	flex-shrink: 0;
 }
 
-.contextMenu .large-icon.selected img {
-  border: 2px solid #CCEEFF !important; 
+.contextMenu .named-icon img {
+	max-width: 3rem;
+}
+.contextMenu .named-icon p {
+	word-wrap: break-word;
+	max-width: 7rem;
+	text-align: center;
 }
 
-.contextMenu .large-icon:hover img {
-  border: 2px solid #DDDDDD;
+.contextMenu .named-icon.selected img {
+  background-color:  #CCEEFF !important; 
+}
+
+.contextMenu .named-icon:hover img {
+  background-color: #DDDDDD;
 }
