--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/risk-first-textures.css
@@ -56,7 +56,7 @@
   fill-opacity: 1; 
 }
 
-[k9-elem=arrow] > g > [k9-elem=caption] > text {
+[k9-elem=arrow] > g > [k9-elem=caption] > g > text {
   fill: white;
   fill-opacity: 1; 
 }
