--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risk-elements.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/risks/risk-elements.css
@@ -40,7 +40,7 @@
 	--kite9-margin-bottom: 15pt;
 }
 
-[k9-elem=risk] > [k9-format=image] {
+[k9-elem=risk] > g > [k9-format=image-fixed] {
 	--kite9-vertical-align: top;
 	--kite9-horizontal-align: center;
 }
