Fixed text-align on chrome

--- a/kite9-server-java/src/main/resources/static/public/templates/grid/grid-elements.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/grid/grid-elements.css
@@ -13,7 +13,7 @@
 	--kite9-vertical-align: center;
 	--kite9-horizontal-align: center;
 	--kite9-sizing: minimize;
-	text-align: middle;
+	text-align: center;
 	--kite9-min-size: 30pt 30pt;
 	--kite9-traversal: always;
 }
