--- a/kite9-server-java/src/main/resources/static/public/templates/risk-first/planner/planner-elements.css
+++ b/kite9-server-java/src/main/resources/static/public/templates/risk-first/planner/planner-elements.css
@@ -9,7 +9,7 @@
   --kite9-vertical-align: center;
   --kite9-horizontal-align: center;
   --kite9-sizing: minimize;
-  text-align: middle;
+  text-align: center;
   --kite9-min-size: 230pt 30pt;
   --kite9-traversal: always;
   --kite9-padding: 10pt;
